2010-06-22  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: Apply AvoidLargeClassesRule

2010-06-15  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs:
	* ExitCodeIsLimitedOnUnixRule.cs:
		Apply AvoidRepetitiveCallsToPropertiesRule

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: Rename GetLastestLocalDefinition
	to FindLastestLocalVersion (apply ConsiderConvertingMethodToPropertyRule)

2010-04-18  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Avoid -pkg:dotnet since it refers to assemblies
	that are not always installed by default (it it's pure laziness
	to use that ;-)

2010-04-14  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: Static-ify Filter and
	ComparePublicKeyToken methods (make self-test)

2009-12-13  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: Only check calls on assemblies
	that are covered by MoMA (e.g. don't check Silverlight platform
	assemblies, user code...)

2009-08-29  Sebastien Pouliot  <sebastien@ximian.com>

	* MonoCompatibilityReviewRule.cs: Added a Version configurable
	property to select between (local) definition files (e.g. a new
	gendarme reviewing compoatibility with an older mono). Automatic
	download of new difinition files when Gendarme is updated (since
	a new version of mono is likely available). Updated documentation

2009-08-26  Jesse Jones  <jesjones@mindspring.com>

	* MonoCompatibilityReviewRule.cs: Edited the description.

2009-07-07  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2008-12-03  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotHardcodePathsRule.cs: Use HasParameters and avoid calling
	ToLower before comparing strings.
	* NewLineLiteralRule.cs: Remove unneeded override on Initialize.

2008-11-18  Sebastien Pouliot  <sebastien@ximian.com>
