@@ -27,6 +27,7 @@
 //
 
 using System;
+using System.Text;
 
 using Mono.Cecil;
 using Mono.Cecil.Cil;
@@ -86,15 +87,40 @@ namespace Gendarme.Rules.Portability {
 					continue;
 
 				if (s.IndexOfAny (InvalidChar) >= 0) {
-					// make the invalid char visible on output
-					s = s.Replace ("\n", "\\n");
-					s = s.Replace ("\r", "\\r");
+					s = FormatStringForDisplay (s);
 					s = String.Format ("Found string: \"{0}\"", s);
 					Runner.Report (method, ins, Severity.Low, Confidence.High, s);
 				}
 			}
 
 			return Runner.CurrentRuleResult;
+		}
+
+		/// <summary>
+		/// Format the string to looks like in the C# source code
+		/// For example the character \x01 is converted to the "\x01" string
+		/// </summary>
+		/// <remarks>This operation avoid crash with special characters when applying the XSL
+		/// transform to produce the html report</remarks>
+		/// <param name="value">the string to format</param>
+		/// <returns>the string fomatted</returns>
+		private static string FormatStringForDisplay (string value)
+		{
+			StringBuilder result = new StringBuilder();
+			foreach (char c in value) {
+				// make the invalid char visible on output
+				if (c == '\n')
+					result.Append ("\\n");
+				else if (c == '\r')
+					result.Append ("\\r");
+				else if (c == '\t')
+					result.Append ("\\t");
+				else if (Char.IsControl (c))
+					result.AppendFormat ("\\x{0}", ((short) c).ToString("00"));
+				else
+					result.Append (c);
+			}
+			return result.ToString ();
 		}
 	}
 }
