@@ -1,3 +1,8 @@
+2010-07-14  Antoine Vandecreme  <avandecreme@sopragroup.com>
+
+	* NewLineLiteralRule.cs: Format specials char to be
+	human readable and XML compliants
+
 2010-06-22  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* MonoCompatibilityReviewRule.cs: Apply AvoidLargeClassesRule
